--- a/src/shopping/components/SectionBtn.module.scss
+++ b/src/shopping/components/SectionBtn.module.scss
@@ -1,7 +1,9 @@
 .sectionBtn {
   display: flex;
-  width: 140px;
-  padding: 10px 34px;
+  width: 100%;
+  margin: 0 1%;
+  padding: 20px 33px;
+  font-size: larger;
   justify-content: center;
   align-items: center;
   border-radius: 15px;
