--- a/src/components/MainBg.module.scss
+++ b/src/components/MainBg.module.scss
@@ -21,6 +21,6 @@
   background-image: url("../../public/images/img/news.png");
 }
 
-.shopBgUrl {
-  background-image: url("../../public/images/img/shop.png");
+.allVendorBgUrl {
+  background-image: url("../../public/images/img/allVendor.png");
 }
