--- a/src/components/MainBg.module.scss
+++ b/src/components/MainBg.module.scss
@@ -21,6 +21,6 @@
   background-image: url("../../public/images/img/news.png");
 }
 
-.allVendorBgUrl {
+.allVendorsBgUrl {
   background-image: url("../../public/images/img/allVendor.png");
 }
