--- a/src/components/MainBg.module.scss
+++ b/src/components/MainBg.module.scss
@@ -24,3 +24,6 @@
 .allVendorsBgUrl {
   background-image: url("../../public/images/img/allVendor.png");
 }
+.typeBgUrl {
+  background-image: url("../../public/images/img/type.png");
+}
