--- a/src/components/MainBg.module.scss
+++ b/src/components/MainBg.module.scss
@@ -27,3 +27,6 @@
 .typeBgUrl {
   background-image: url("../../public/images/img/type.png");
 }
+.mapBgUrl {
+  background-image: url("../../public/images/img/map.png");
+}
