--- a/src/components/SubTitleOrange.module.scss
+++ b/src/components/SubTitleOrange.module.scss
@@ -1,8 +1,7 @@
 .title {
   width: 307px;
   height: 98px;
-  padding: 12px 40px;
-  text-align-last: justify;
+  text-align-last: center;
   background-image: url(../../public/images/img/second-title-orange.png);
   background-repeat: no-repeat;
   background-size: cover;
