--- a/src/components/SubTitleYellow.module.scss
+++ b/src/components/SubTitleYellow.module.scss
@@ -1,9 +1,8 @@
 .title {
-  width: 307px;
+  width: 320px;
   height: 98px;
-  padding: 12px 40px;
-  text-align-last: justify;
-  background-image: url(../../public/images/img/second-title-orange.png);
+  text-align-last: center;
+  background-image: url(../../public/images/img/second-title-yellow.png);
   background-repeat: no-repeat;
   background-size: cover;
   vertical-align: middle;
