--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,49 @@
-// 色票
-$primary: #a1cae3;
-$secondary: #f7ea57;
-$lake: #b7efe0;
-$lightblue: #e8f6fe;
-$gray: #9e9e9e;
-$blue-grey: #546975;
+$colors: (
+  "primary": #a1cae3,
+  "secondary": #f7ea57,
+  "lake": #b7efe0,
+  "lightblue": #e8f6fe,
+  "gray": #9e9e9e,
+  "blue-grey": #546975,
+);
+
+@each $name, $color in $colors {
+  .c-#{$name} {
+    color: $color;
+  }
+
+  .bg-#{$name} {
+    background-color: $color;
+  }
+}
+
+$layouts: (
+  "center": (
+    display: flex,
+    justify-content: center,
+    align-items: center,
+  ),
+  "start": (
+    display: flex,
+    justify-content: flex-start,
+    align-items: center,
+  ),
+  "end": (
+    display: flex,
+    justify-content: flex-end,
+    align-items: center,
+  ),
+  //   "center": (
+  //     display: flex,
+  //     justify-content: center,
+  //     align-items: center,
+  //   ),
+);
+
+@each $name, $props in $layouts {
+  .f-#{$name} {
+    @each $property, $value in $props {
+      #{$property}: $value;
+    }
+  }
+}
