--- a/src/style.scss
+++ b/src/style.scss
@@ -4,9 +4,10 @@ $colors: (
   "lake": #b7efe0,
   "lightBlue": #e8f6fe,
   "gray": #9e9e9e,
-  "blueGrey": #546975,
-  "white": #eee,
+  "blueGray": #546975,
+  "white": #fff,
   "black": #333,
+  "pink": #f8e7e5,
 );
 
 @each $name, $color in $colors {
@@ -29,6 +30,9 @@ $colors: (
       background-color: $color;
     }
   }
+}
+.cursor-point {
+  cursor: pointer;
 }
 
 $layouts: (
