--- a/操作文檔/Scss.scss
+++ b/操作文檔/Scss.scss
@@ -1,13 +1,14 @@
 // 1.安裝：npm i -D node-sass（專案已安裝完畢）
-// —————————————————————————————— 
+// ——————————————————————————————
 // 2.Scss 檔案命名規則
 // 該componen名稱.module.scss
-// ex：Home.jsx => Home.module.scss 
+// ex：Home.jsx => Home.module.scss
 // ＊注意第一個字母要大寫！！！
-// ———————————————————————————————— 
+// ————————————————————————————————
 // 4.變數宣告取用
 // https://hackmd.io/@Heidi-Liu/sass-css-preprocessor
 
+// 範例
 $font-stack: Helvetica, sans-serif;
 $primary-color: #333;
 
