--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,7 @@ $colors: (
   "white": #fff,
   "black": #333,
   "pink": #f8e7e5,
+  "lightGray": #eeeeee50,
 );
 
 @each $name, $color in $colors {
@@ -59,4 +60,24 @@ $layouts: (
       #{$property}: $value;
     }
   }
+}
+.w-32 {
+  width: 32%;
+}
+
+.f-col-center {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+}
+.f-col-j-sa-a-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.w-10 {
+  width: 10%;
 }
