--- a/src/style.scss
+++ b/src/style.scss
@@ -71,7 +71,7 @@ $layouts: (
   align-content: center;
   align-items: center;
 }
-.f-col-j-sa-a-center {
+.f-col-around {
   display: flex;
   flex-direction: column;
   align-items: center;
