--- a/src/components/MemberVenderSideBar.module.scss
+++ b/src/components/MemberVenderSideBar.module.scss
@@ -3,6 +3,12 @@
   h4 {
     width: fit-content;
     border: dashed 1px gray;
+    padding: 3% 1%;
+  }
+
+  h5 {
+    width: fit-content;
+    border: dashed 1px gray;
     padding: 6%;
   }
 }
