--- a/src/allVendor/components/AllVendorsCard.module.scss
+++ b/src/allVendor/components/AllVendorsCard.module.scss
@@ -27,10 +27,10 @@
   }
   .cardTag {
     font-size: small;
-    width: 90px;
+    width: fit-content;
     border-radius: 50px;
     border: 3px solid #a1cae3;
-    padding: 2px 10px;
-    margin: 0.2rem 0;
+    padding: 7px 10px;
+    margin: 0.5rem 0;
   }
 }
