--- a/src/style.scss
+++ b/src/style.scss
@@ -104,3 +104,9 @@ $layouts: (
 .w-fit {
   width: fit-content;
 }
+.fs-1 {
+  font-size: 4rem !important;
+}
+.fs-2 {
+  font-size: 3.4rem !important;
+}
