--- a/src/home/components/Main.module.scss
+++ b/src/home/components/Main.module.scss
@@ -25,3 +25,49 @@
   right: 58px;
   object-fit: cover;
 }
+
+.imageContainer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: calc(100% - 500px);
+  height: 100%;
+}
+
+.mainImg {
+  position: absolute;
+  height: 630px;
+  top: 70px;
+  right: 58px;
+  object-fit: cover;
+}
+
+.textContainer {
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  z-index: 10;
+}
+
+.typewriter {
+  color: black;
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1.5;
+  text-align: left;
+  white-space: pre-wrap;
+
+  span {
+    display: block;
+
+    &.indent {
+      text-indent: 1em;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .typewriter {
+    font-size: 1.5rem;
+  }
+}
