--- a/src/components/MainBg.module.scss
+++ b/src/components/MainBg.module.scss
@@ -28,3 +28,6 @@
 .mapBgUrl {
   background-image: url("../../public/images/img/map.png");
 }
+.setStallsBgUrl {
+  background-image: url("../../public/images/img/setStalls.png");
+}
