--- a/src/style.scss
+++ b/src/style.scss
@@ -20,8 +20,14 @@ $colors: (
   "white": #fff,
   "black": #333,
   "pink": #f8e7e5,
-  "lightGray": #eeeeee50,
+  "red": #f06f5f,
 );
+
+.bg-glass {
+  background-color: rgba(rgb(46, 46, 46), 0.1); /* 使用rgba來設置透明度 */
+  backdrop-filter: blur(100px); /* 毛玻璃效果 */
+  -webkit-backdrop-filter: blur(5px); /* 兼容Safari瀏覽器 */
+}
 
 @each $name, $color in $colors {
   .c-#{$name} {
