--- a/src/allVendor/components/AllVendorsCard.module.scss
+++ b/src/allVendor/components/AllVendorsCard.module.scss
@@ -1,5 +1,5 @@
 .cardBg {
-  border-radius: 25px;
+  border-radius: 35px;
   background: var(
     --card-linear-fill,
     linear-gradient(
@@ -14,6 +14,9 @@
 
   .cardImg {
     border-radius: 25px;
+    // width: 300px;
+    height: 250px;
+    object-fit: cover;
   }
   .cardText {
     color: gray;
