--- a/src/map/components/MarketFloorPlan.module.scss
+++ b/src/map/components/MarketFloorPlan.module.scss
@@ -91,4 +91,10 @@
   .iconButton:last-child {
     margin-right: 0;
   }
+
+  .stall:hover {
+    background-color: #a1cae3;
+    cursor: pointer;
+  }
 }
+  
