--- a/src/home/components/MenuItem.module.scss
+++ b/src/home/components/MenuItem.module.scss
@@ -1,6 +1,17 @@
 .menuItems {
-  background-color: #a1cae3;
   box-sizing: content-box;
   width: 20%;
   cursor: pointer;
+  transition: all 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.default {
+  background-color: #a1cae3;
+}
+
+.hovered {
+  background-color: #546975;
 }
