攤位主頁連結、社群媒體OK

--- a/src/style.scss
+++ b/src/style.scss
@@ -23,7 +23,7 @@ $colors: (
   "red": #f06f5f,
   "blue": #5a79ba,
   "brown": #a58f86,
-  "gress": #c3d825,
+  "gress": #b8cd1d,
 );
 
 .bg-glass {
