--- a/src/map/components/VendorDetail.module.scss
+++ b/src/map/components/VendorDetail.module.scss
@@ -34,4 +34,10 @@
     border-width: 12px 12px 12px 0; 
   }
 }
+.seeMore {
+  display: inline-block;
+  text-decoration: none;
+  color: #9e9e9e;
+  font-size: 20px;
+}
 
