--- a/src/style.scss
+++ b/src/style.scss
@@ -189,3 +189,8 @@ $layouts: (
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical; 
 }
+//forMarketFloorPlanB，已出租攤位
+.bg-select-gray {
+  background: #9e9e9e;
+  pointer-events: none;
+}
