--- a/src/components/MarketFloorPlan.module.scss
+++ b/src/components/MarketFloorPlan.module.scss
@@ -42,6 +42,7 @@
     margin: 0 1%;
     text-align: center;
     align-content: center;
+    border-radius: 15%;
   }
 
   .dot {
@@ -92,14 +93,6 @@
 
   .iconButton:last-child {
     margin-right: 0;
-  }
-
-  .stall:hover {
-    background-color: #a1cae3;
-    cursor: pointer;
-  }
-  .stall.clicked {
-    background-color: #a1cae3;
   }
   .toiletOnClick {
     background-color: rgb(239, 225, 65);
