--- a/src/components/MarketFloorPlanB.module.scss
+++ b/src/components/MarketFloorPlanB.module.scss
@@ -42,6 +42,10 @@
     margin: 0 1%;
     text-align: center;
     align-content: center;
+    border-radius: 15%;
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .dot {
@@ -92,11 +96,6 @@
 
   .iconButton:last-child {
     margin-right: 0;
-  }
-
-  .stall:hover {
-    background-color: #a1cae3;
-    cursor: pointer;
   }
 
   .toiletOnClick {
