--- a/src/map/components/MarketFloorPlan.module.scss
+++ b/src/map/components/MarketFloorPlan.module.scss
@@ -42,6 +42,7 @@
     margin: 0 1%;
     text-align: center;
     align-content: center;
+    border-radius: 15%;
   }
 
   .dot {
@@ -95,7 +96,7 @@
   }
 
   .stall:hover {
-    background-color: #a1cae3;
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     cursor: pointer;
   }
 
