--- a/src/style.scss
+++ b/src/style.scss
@@ -27,7 +27,7 @@ $colors: (
 );
 
 .bg-glass {
-  background-color: rgba(rgb(46, 46, 46), 0.1); /* 使用rgba來設置透明度 */
+  background-color: rgba(rgba(235, 235, 235, 0.8), 0.1); /* 使用rgba來設置透明度 */
   backdrop-filter: blur(100px); /* 毛玻璃效果 */
   -webkit-backdrop-filter: blur(5px); /* 兼容Safari瀏覽器 */
 }
