--- a/src/components/MarketFloorPlanB.module.scss
+++ b/src/components/MarketFloorPlanB.module.scss
@@ -38,7 +38,7 @@
   .stall {
     width: 20%;
     aspect-ratio: 1;
-    border: 1px solid #000;
+    box-shadow: 0px 3px 6px 0px #7d7675;
     margin: 0 1%;
     text-align: center;
     align-content: center;
