--- a/src/style.scss
+++ b/src/style.scss
@@ -14,7 +14,7 @@ $colors: (
   "primary": #84afc9,
   "secondary": #f7ea57,
   "lake": #96dbc9,
-  "lightBlue": #a6cee6,
+  "lightBlue": rgb(166, 206, 230),
   "gray": #9e9e9e,
   "blueGray": #546975,
   "white": #fff,
